[MISC] Renamed the 'color' key in the 'textInput' map into the consistent 'textColor' name

--- a/Resources/Private/Sass/Base/_Forms.scss
+++ b/Resources/Private/Sass/Base/_Forms.scss
@@ -23,7 +23,7 @@ textarea {
 	box-shadow: map-get($textInput, boxShadow);
 
 	@include font-size(map-get($textInput, fontSize));
-	color: map-get($textInput, color);
+	color: map-get($textInput, textColor);
 }
 textarea {
 	height: auto; /* Reset height since textareas have the attribute rows="" */
