--- a/Resources/Private/Sass/_Variables.scss
+++ b/Resources/Private/Sass/_Variables.scss
@@ -162,7 +162,7 @@ $textInput: (
 	borderRadius:         $brand-border-radius,
 	boxShadow:            inset 0 1px 1px rgba(#000, 0.075),
 	fontSize:             14,
-	color:                lighten($base-text-color, 5%)
+	textColor:                lighten($base-text-color, 5%)
 );
 
 
