--- a/Resources/Private/Sass/Base/_Headings.scss
+++ b/Resources/Private/Sass/Base/_Headings.scss
@@ -11,30 +11,23 @@ $ Headings
 ================================================================================ */
 h1, h2, h3,
 h4, h5, h6 {
-	@if $headings-font-family { font-family: $headings-font-family; }
-	font-weight: $headings-font-weight;
-	color: $headings-color;
+	@if map-get($headings, fontFamily) { font-family: map-get($headings, fontFamily); }
+	font-weight: map-get($headings, fontWeight);
+	color: map-get($headings, color);
 	/**
 	 * Optimized kerning for large font sizes
 	 * use this only on large font-sizes (f.e. headings) to avoid performance issues
 	 */
 	text-rendering: optimizeLegibility;
 }
-h1, .h1 {
-	@include font-size($h1-size, $append-vrythm: true);
-}
-h2, .h2 {
-	@include font-size($h2-size, $append-vrythm: true);
-}
-h3, .h3 {
-	@include font-size($h3-size, $append-vrythm: true);
-}
-h4, .h4 {
-	@include font-size($h4-size, $append-vrythm: true);
-}
-h5, .h5 {
-	@include font-size($h5-size, $append-vrythm: true);
-}
-h6, .h6 {
-	@include font-size($h6-size, $append-vrythm: true);
+
+@each $key, $value in map-get($headings, elements) {
+	$headingFontSize: map-fetch($headings, elements $key font-size);
+	$additionalRules: map-remove(map-fetch($headings, elements $key), font-size);
+	#{$key}, .#{$key} {
+		@include font-size($headingFontSize, $append-vrythm: false);
+		@each $declaration, $value in $additionalRules {
+			#{$declaration}: $value;
+		}
+	}
 }
