--- a/Resources/Private/Sass/_Variables.scss
+++ b/Resources/Private/Sass/_Variables.scss
@@ -94,23 +94,38 @@ $half-spacing:          $basic-spacing / 2;
 // =============================================================================
 // Headings
 // =============================================================================
-// If all headings use a different font-family than the '$base-font-family'
-// change this variable from 'false' to a proper font-stack.
-$headings-font-family:  false;
-
-// Font-weight fpr all headings.
-$headings-font-weight:  $bold;
-
-// Color for all headings.
-$headings-color:        #000;
-
-// Heading font-sizes (in pixels).
-$h1-size:               36;
-$h2-size:               30;
-$h3-size:               24;
-$h4-size:               20;
-$h5-size:               16;
-$h6-size:               14;
+// Default settings for all heading elements, you can pass additional rules into each
+// element map f.e.
+// h1: (
+//   font-size: 36,
+//   color: red,
+//   margin-bottom: 12px
+// )
+$headings: (
+	fontFamily:           false,
+	fontWeight:           $bold,
+	color:                #000,
+	elements: (
+		h1: (
+			font-size: 36
+		),
+		h2: (
+			font-size: 30
+		),
+		h3: (
+			font-size: 24
+		),
+		h4: (
+			font-size: 20
+		),
+		h5: (
+			font-size: 16
+		),
+		h6: (
+			font-size: 14
+		)
+	)
+);
 
 
 // =============================================================================
