--- a/Resources/Private/Sass/Generic/_Head.scss
+++ b/Resources/Private/Sass/Generic/_Head.scss
@@ -13,7 +13,7 @@
 //   /* =============================================================================
 //   $ CSS Viewport
 //   ================================================================================ */
-//   @include viewport($width: device-width, $zoom: 1);
+//   @viewport { width: device-width; zoom: 1; }
 // }
 
 
