--- a/Resources/Private/Sass/Base/_Lists.scss
+++ b/Resources/Private/Sass/Base/_Lists.scss
@@ -54,24 +54,26 @@ dd {
 }
 
 
-/* =============================================================================
-$ Horizontal definition abstraction
-================================================================================
- * Display a definition list in a horizontal order
- * e.g.
- *
-<dl class="dl--horizontal">
+/*
+Horizontal definition abstraction
+
+.dl--horizontal - Display a definition list in a horizontal order.
+
+Markup:
+<dl class="{$modifiers}">
 	<dt>Description lists</dt>
 	<dd>A description list is perfect for defining terms.</dd>
 	<dt>Euismod</dt>
-	<dd>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</dd>
+	<dd>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem.</dd>
 	<dd>Donec id elit non mi porta gravida at eget metus.</dd>
 	<dt>Malesuada porta</dt>
 	<dd>Etiam porta sem malesuada magna mollis euismod.</dd>
 	<dt>Felis euismod semper eget lacinia</dt>
 	<dd>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</dd>
 </dl>
-================================================================================ */
+
+Styleguide 2.1.3
+*/
 .dl--horizontal {
 	@extend .cf;
 	dt {
