--- a/Resources/Private/Sass/Main.scss
+++ b/Resources/Private/Sass/Main.scss
@@ -9,26 +9,20 @@
 
  */
 
-// =============================================================================
-// SASS Setup
-// =============================================================================
-// 1. "_Settings/_All"          - Mixins, functions and default vars from t3b_template
-// 2. "_Variables"              - Customized project variables
-// =============================================================================
+/*
+SASS Functions & Mixins
+
+Styleguide 1
+*/
 @import "_Settings/_All",
         "_Variables";
 
 
-// =============================================================================
-// Generic
-// =============================================================================
-// 1. "Generic/_Head"           - Declarations which should be put at the top of the document
-// 2. "Generic/_Normalize"      - Nicolas Gallagher's normalize.css
-// 3. "Generic/_Debug"          - Debug code wich applies if the $devMode variable is set to 'true'
-// 4. "Generic/_Widths"         - Human readable width classes from inuit.css
-// 5. "Generic/_T3General"      - TYPO3 related classes
-// 6. "Generic/_Brand"          - Generated brand classes like colors, font-families & logos
-// =============================================================================
+/*
+Helper- & Generic-classes
+
+Styleguide 4
+*/
 @import "Generic/_Head",
         "Generic/_Normalize",
         "Generic/_Debug",
@@ -37,18 +31,11 @@
         "Generic/_Brand";
 
 
-// =============================================================================
-// Basic HTML element styling
-// =============================================================================
-// 1. "Base/_Base"              - High-level wrapper elements and classes
-// 2. "Base/_Headings"          - Double-stranded heading hierarchy
-// 3. "Base/_Typography"        - Typography related elements
-// 4. "Base/_Links"             - Anchor tag & Links
-// 5. "Base/_Lists"             - Lists & definitions
-// 6. "Base/_Media"             - Images, audio & video
-// 7. "Base/_Tables"            - Tables
-// 8. "Base/_Forms"             - Forms, input's and other form related elements
-// =============================================================================
+/*
+Base element stylings
+
+Styleguide 2
+*/
 @import "Base/_Base",
         "Base/_Headings",
         "Base/_Typography",
@@ -59,14 +46,11 @@
         "Base/_Forms";
 
 
-// =============================================================================
-// Objects
-// =============================================================================
-// 1. "Objects/_Buttons"        - Button object and it's modifiers
-// 2. "Objects/_Form"           - Abstractions of the '<form>' element
-// 3. "Objects/_Navigations"    - Navigation object and it's modifiers
-// 4. "Objects/_Grid"           - Grid object and it's modifiers
-// =============================================================================
+/*
+Objects
+
+Styleguide 3
+*/
 @import "Objects/_Button",
 	"Objects/_Form",
         "Objects/_Navigation",
