--- a/Documentation/Private/Template/index.html
+++ b/Documentation/Private/Template/index.html
@@ -11,6 +11,7 @@
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="public/kss.css">
 	<link rel="stylesheet" href="public/style.css">
+	<link rel="stylesheet" href="../Resources/Public/Stylesheets/Main.css">
 </head>
 <body class="kssBody">
 	<header class="kss___header" role="banner">
