--- a/Resources/Private/Sass/_Settings/_Functions.scss
+++ b/Resources/Private/Sass/_Settings/_Functions.scss
@@ -1,40 +1,40 @@
-/*
-SASS Functions
+//
+// SASS Functions
+//
+// Styleguide 1.1
+//
 
-Styleguide 1.1
-*/
 
-
-/*
-Image-Url($imagePath)
-
-Return the path of an Image asset.
-
-Markup:
-.selector {
-	background-image: image-url("logo.png");
-}
-
-Styleguide 1.1.1
-*/
+//
+// Image-Url($imagePath)
+//
+// Return the path of an Image asset.
+//
+// Markup:
+// .selector {
+// 	background-image: image-url("logo.png");
+// }
+//
+// Styleguide 1.1.1
+//
 @function image-url($imagePath) {
   @return url(#{"../Images/" + $imagePath});
 }
 
 
 
-/*
-Relative Size($target-size, $context, $unit)
-
-Calculates em's based on pixel values.
-
-Markup:
-.selector {
-	font-size: rs(19, 16);
-}
-
-Styleguide 1.1.2
-*/
+//
+// Relative Size($target-size, $context, $unit)
+//
+// Calculates em's based on pixel values.
+//
+// Markup:
+// .selector {
+// 	font-size: rs(19, 16);
+// }
+//
+// Styleguide 1.1.2
+//
 @function rs($target-size, $context: $base-font-size, $unit: em) {
 	@return #{$target-size/$context}$unit;
 }
@@ -58,18 +58,18 @@ $end: right !default;
 }
 
 
-/*
-Color-Adjust($color, $contrast)
-
-Adjust a color based on the lightness which is passed as a second parameter, this function was written by @necolas(https://github.com/necolas/).
-
-Markup:
-.selector {
-  background: color-adjust(#0097d7, 100%);
-}
-
-Styleguide 1.1.3
-*/
+//
+// Color-Adjust($color, $contrast)
+//
+// Adjust a color based on the lightness which is passed as a second parameter, this function was written by @necolas(https://github.com/necolas/).
+//
+// Markup:
+// .selector {
+//   background: color-adjust(#0097d7, 100%);
+// }
+//
+// Styleguide 1.1.3
+//
 @function color-adjust($color, $contrast: 100%) {
 	@if (lightness($color) > 50) {
 		@return darken($color, $contrast)
@@ -80,20 +80,20 @@ Styleguide 1.1.3
 }
 
 
-/*
-Map-Fetch($map, $keys)
-
-Navigate a nested maps with map-fetch() in Sass, this function was written by @jlong(https://github.com/jlong/)
-
-Markup:
-@each $key, $value in map-get($headings, elements) {
- .selector {
-   font-size: map-fetch($headings, elements $key font-size) +px;
-  }
-}
-
-Styleguide 1.1.4
-*/
+//
+// Map-Fetch($map, $keys)
+//
+// Navigate a nested maps with map-fetch() in Sass, this function was written by @jlong(https://github.com/jlong/)
+//
+// Markup:
+// @each $key, $value in map-get($headings, elements) {
+//  .selector {
+//    font-size: map-fetch($headings, elements $key font-size) +px;
+//   }
+// }
+//
+// Styleguide 1.1.4
+//
 @function map-fetch($map, $keys) {
 	$key: nth($keys, 1);
 	$length: length($keys);
@@ -110,16 +110,16 @@ Styleguide 1.1.4
 }
 
 
-/*
-Map-RemoveKeys($map, $keys)
-
-Remove multiple keys in a Sass map at once.
-
-Markup:
-$newDecalarationsMap: map-removeKeys($declarations, font-size margin-bottom);
-
-Styleguide 1.1.5
-*/
+//
+// Map-RemoveKeys($map, $keys)
+//
+// Remove multiple keys in a Sass map at once.
+//
+// Markup:
+// $newDecalarationsMap: map-removeKeys($declarations, font-size margin-bottom);
+//
+// Styleguide 1.1.5
+//
 @function map-removeKeys($map, $keys) {
 	$length: length($keys);
 	@if ($length > 1) {
