[TASK] Use a file based structure for the generated styleguide

--- a/Resources/Private/Sass/Base/_Forms.scss
+++ b/Resources/Private/Sass/Base/_Forms.scss
@@ -1,7 +1,9 @@
 /*
+Forms
+
 Basic styling for forms and inputs
 
-Styleguide 2.1
+Styleguide 3
 */
 
 
@@ -17,7 +19,7 @@ Markup:
 <input type="text" class="{$modifiers}" /><br>
 <textarea class="{$modifiers}" cols="40"></textarea>
 
-Styleguide 2.1.1
+Styleguide 3.0.1
 */
 %textInput,
 .textInput {
