--- a/Resources/Private/Sass/Base/_Tables.scss
+++ b/Resources/Private/Sass/Base/_Tables.scss
@@ -1,9 +1,10 @@
 /*
- * Basic styling and extended classes for tables
- *
- * @package #{ext_directory()}
- * @path Base/_Tables.scss
- */
+Tables
+
+Basic styling and extended classes for tables.
+
+Styleguide 6
+*/
 
 
 /*
@@ -43,7 +44,7 @@ Markup:
 	</tbody>
 </table>
 
-Styleguide 2.1.4
+Styleguide 6.0.1
 */
 table {
 	max-width: 100%;
