--- a/Resources/Private/Sass/Base/_Typography.scss
+++ b/Resources/Private/Sass/Base/_Typography.scss
@@ -1,10 +1,10 @@
 /*
- * Basic styling for all typographic related elements e.g.
- * <b>, <sup>, <i>
- *
- * @package #{ext_directory()}
- * @path Base/_Typography.scss
- */
+Typography
+
+Basic styling for all typographic related elements.
+
+Styleguide 7
+*/
 
 
 /* =============================================================================
@@ -146,7 +146,7 @@ Typographic Helper Classes
 Markup:
 <p class="{$modifiers}">I am an paragraph.</p>
 
-Styleguide 2.1.5
+Styleguide 7.0.1
 */
 .align-center { text-align: center; }
 .align-right  { text-align: right; }
