[MISC] Renamed the 'baseHoverColor' var to 'activeColor'

--- a/Documentation/Private/Template/public/kss.less
+++ b/Documentation/Private/Template/public/kss.less
@@ -3,7 +3,7 @@
 
 @baseBorderColor: #eee;
 @baseActionColor: #4183c4;
-@baseHoverColor: #d26911;
+@activeColor: #d26911;
 @lightGrey: #f9f9f9;
 
 @baseFontSize: 16px;
@@ -57,7 +57,7 @@
 		}
 		&.kss___nav__item--active > a {
 			color: @baseTextColor;
-			border-color: @baseHoverColor;
+			border-color: @activeColor;
 			&:hover {
 				cursor: default;
 				background: 0;
