--- a/Documentation/Private/Template/public/kss.less
+++ b/Documentation/Private/Template/public/kss.less
@@ -1,6 +1,7 @@
 // Vars
 @baseFontFamily: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
+@baseBackgroundColor: #FFF;
 @baseBorderColor: #eee;
 @baseActionColor: #4183c4;
 @activeColor: #d26911;
@@ -15,17 +16,19 @@
 
 /* Base styles */
 .kssBody {
-	background: #FFF;
+	background: @baseBackgroundColor;
 	margin: 0;
 }
 
 /* Header */
 .kss___header {
 	position: relative;
+	z-index: 1;
 	margin-bottom: @baseSpacing*2;
 	padding: 26px @baseIndent*4 26px @baseIndent;
 	border-bottom: 1px solid @baseBorderColor;
 	font-family: @baseFontFamily;
+	background: @baseBackgroundColor;
 	h1 {
 		margin-top: 0;
 		margin-bottom: 0;
@@ -40,36 +43,67 @@
 	padding: @baseSpacing*3 @baseIndent 0;
 	font-family: @baseFontFamily;
 	font-size: @baseFontSize;
-	.kss___nav__item {
-		border-bottom: 1px solid @baseBorderColor;
-		> a {
-			color: @baseActionColor;
-			padding: @baseSpacing 3px @baseSpacing @baseSpacing/2;
-			transition: .2s ease all;
-			border-left: 2px solid #FFF;
-			transition: .2s ease all;
-			&:hover {
-				text-decoration: none;
-				background: @lightGrey;
-				border-color: @lightGrey;
-				color: @baseTextColor;
-			}
-		}
-		&.kss___nav__item--active > a {
+}
+.kss___nav__item {
+	border-bottom: 1px solid @baseBorderColor;
+	> a {
+		color: @baseActionColor;
+		padding: @baseSpacing 3px @baseSpacing @baseSpacing/2;
+		transition: .2s ease all;
+		border-left: 2px solid #FFF;
+		transition: .2s ease all;
+		&:hover {
+			text-decoration: none;
+			background: @lightGrey;
+			border-color: @lightGrey;
 			color: @baseTextColor;
-			border-color: @activeColor;
-			&:hover {
-				cursor: default;
-				background: 0;
-			}
 		}
-		&:last-child {
-			border-bottom: 0;
-		}
+	}
+	&:last-child {
+		border-bottom: 0;
+	}
+}
+.kss___nav__item--active > a {
+	color: @baseTextColor;
+	border-color: @activeColor;
+	&:hover {
+		cursor: default;
+		background: 0;
 	}
 }
 
+.kss___nav--sticky {
+	position: fixed;
+	top: 0;
+	width: 21%;
+}
 
+.kss___navSub {
+	font-size: 12px;
+	padding-bottom: @baseSpacing;
+}
+.kss___navSub__item {
+	display: table-row !important;
+	line-height: 1.2;
+	> a {
+		padding: 2px @baseSpacing/2 2px @baseIndent;
+		border-left: 2px solid #fff;
+		transition: .2s ease all;
+	}
+}
+.kss___navSub__item--active {
+	> a {
+		color: @baseTextColor;
+		border-color: @activeColor;
+	}
+}
+.kss___navSub__item__ref {
+	display: table-cell;
+	padding-right: @baseSpacing/2;
+}
+.kss___navSub__item__header {
+	display: table-cell;
+}
 
 /* Styleguide */
 .kss___contentWrapper {
@@ -195,8 +229,10 @@
 
 
 /* Prettify */
+.kss-markup {
+	padding-bottom: @baseSpacing*3;
+}
 .prettyprint {
-	margin: 0 0 @baseSpacing*3;
 	padding: @baseSpacing;
 	background: #edf6f8;
 	border: 1px solid #dde7ea;
