[TASK] Make sure floats get cleared inside the styleguide example boxes

--- a/Documentation/Private/Template/index.html
+++ b/Documentation/Private/Template/index.html
@@ -63,12 +63,12 @@
 					{{#ifAny markup modifiers}}
 					<div class="kss-box">{{html description}}</div>
 					<div class="kss-styleguideSection">
-						<div class="kss-styleguideElement">
+						<div class="kss-styleguideElement cf">
 							<div class="kss-styleguideElement__heading"><b>Default</b></div>
 							{{modifierMarkup}}
 						</div>
 						{{#eachModifier}}
-						<div class="kss-styleguideElement">
+						<div class="kss-styleguideElement cf">
 							<div class="kss-styleguideElement__heading"><b>{{html description}}</b></div>
 							<div class="kss-styleguideElement__class">{{name}}</div>
 							{{modifierMarkup}}
